Added Balance Tracking in Firebase backend

--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -33,6 +33,7 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
-    "noUnusedLocals": false
+    "noUnusedLocals": false,
+    "skipLibCheck": true
   }
 }
